Нарезка шаблона на отдельные блоки -шапка -центр -футер

--- a/frontend/web/css/general-css/pages.css
+++ b/frontend/web/css/general-css/pages.css
@@ -647,7 +647,9 @@ html, body {
 li{
     list-style: none;
 }
-
+a{
+    outline: none !important; /* Убираем границу вокруг ссылок  */
+}
 /*
 ========================================================================================================
                                                                                         header
