--- a/frontend/web/css/general-css/pages.css
+++ b/frontend/web/css/general-css/pages.css
@@ -119,6 +119,18 @@
                         часто-используемые стили
 --------------------------------------------------------------------------------
 */
+
+/*стиль для кнопки - выход из сайта*/
+.button-like-link{
+    display: inline;
+    border:none;
+}
+.button-like-link button{
+    display: inline-block;
+    width: 45px;
+    border:none;
+}
+
 .display-none{
     display: none;
 }
@@ -138,7 +150,7 @@ form  input{
     width: 100%;
     height: 35px;
     border: 1px #d1d1d1 solid;
-    text-indent: 20px;
+/*    text-indent: 20px;*/
     font-family: 'Conv_Lato-Light';
     font-size: 13px;
 }
@@ -157,8 +169,8 @@ form button{
 /*    right: 10px;
     top:50%;
     margin-top:-10px;*/
-    width: 20px;
-    height: 20px;
+/*    width: 20px;
+    height: 20px;*/
     background-color: #fff;
     border: 1px #d1d1d1 solid;
 /*    border-radius: 10px;
@@ -706,6 +718,24 @@ a{
 }
 
 /*контент хедера*/
+#login-links{
+    display: table;
+    position: absolute;
+    right: 10%;
+}
+#login-links a{
+    line-height: 10px;
+}
+#login-links a:first-child small{
+    border-right: 1px #E0E0E0 solid;
+}
+#login-links a small{
+    color: #b2b2b2;
+    line-height: 10px;
+    padding: 0 10px;
+
+}
+
 #header-logo-box{
     height: 156px;
 /*    overflow: hidden;*/
@@ -911,6 +941,11 @@ article{
     padding: 30px 0 0 0;
 }
 
+.gen-img-blogPost{
+    width: 100%;
+    height: auto;
+    padding: 20px 0;
+}
 /*//////////////////////////////////////////////////////////////////////////////*/
 /*стили горизонтальной секции */
 /*.h3-selection-horizontal{
@@ -1137,6 +1172,7 @@ form#subscribe-form input{
     height: 46px;
     float: left;
     padding-right: 5px;
+    text-indent: 20px;
 
 }
 form#subscribe-form button{
