Добавлена базовая возможность регистрации через соц сети

--- a/frontend/web/css/bootstrap/bootstrap-theme.min-old.css
+++ b/frontend/web/css/bootstrap/bootstrap-theme.min-old.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://bootstrap-3.ru/customize.php?id=5e89d36ced1e9a67a623cf3d4c0f8823)
- * Config saved to config.json and https://gist.github.com/5e89d36ced1e9a67a623cf3d4c0f8823
+ * Generated using the Bootstrap Customizer (http://bootstrap-3.ru/customize.php?id=d44a8d00eb78e34a45d3)
+ * Config saved to config.json and https://gist.github.com/d44a8d00eb78e34a45d3
  *//*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
