--- a/frontend/web/css/general-css/pages.css
+++ b/frontend/web/css/general-css/pages.css
@@ -1160,22 +1160,22 @@ aside{
     word-wrap: break-word;
     display: inline-block;
 }
-form#subscribe-form{
+form.subscribe-form{
     position: relative;
     padding-right: 95px;
     overflow: hidden;
 }
-/*form#subscribe-form label{
+/*form.subscribe-form label{
 
 }*/
-form#subscribe-form input{
+form.subscribe-form input{
     height: 46px;
     float: left;
     padding-right: 5px;
     text-indent: 20px;
 
 }
-form#subscribe-form button{
+form.subscribe-form button{
     font-family: 'Conv_Lato-Regular';
     display: inline-block;
     width: 95px;
@@ -1191,6 +1191,20 @@ form#subscribe-form button{
     text-align: center;
     padding: 0;
 }
+/*используется в форме ActiveForm::begin Yii2*/
+form.subscribe-form .form-control{
+    border-radius: 0;
+    text-indent: 0;
+    padding-left:5px;
+
+}
+/*используется в форме ActiveForm::begin Yii2*/
+form.subscribe-form .help-block{
+    margin: 0;
+    font-size: 80%;
+}
+
+
 #subscribe-form-soc{
 /*    border-top: 1px #b2b2b2 solid;
     border-bottom: 1px #b2b2b2 solid;*/
