Cоздание виджета комментариев с обновлением постов с помощью pjax

--- a/frontend/web/css/comments/comments.css
+++ b/frontend/web/css/comments/comments.css
@@ -6,6 +6,7 @@
 #message_textarea{
     width: 100%;
     min-height: 150px;
+    color:#868686;
 }
 .noComments{
     text-align: center;
@@ -18,8 +19,7 @@
 
 }
 /*.commentAvatar{
-    width: 50px;
-    height: 50px;
+    border:5px #fff solid;
 }*/
 
 
@@ -43,23 +43,26 @@
 }
 
 .comments .comment-content {
-    background: -webkit-linear-gradient(right left, #f8f8f8, #f3f3f3);
+/*    background: -webkit-linear-gradient(right left, #f8f8f8, #f3f3f3);
     background: -moz-linear-gradient(right left, #f8f8f8, #f3f3f3);
     background: -o-linear-gradient(right left, #f8f8f8, #f3f3f3);
-    background: linear-gradient(to left right, #f8f8f8, #f3f3f3);
-    -webkit-box-shadow: 0 0 3px #cccccc, inset 0 -1px 1px #e9e9e9, 0 1px 1px rgba(0, 0, 0, 0.12), inset 0 1px 1px white;
-    -moz-box-shadow: 0 0 3px #cccccc, inset 0 -1px 1px #e9e9e9, 0 1px 1px rgba(0, 0, 0, 0.12), inset 0 1px 1px white;
-    box-shadow: 0 0 3px #cccccc, inset 0 -1px 1px #e9e9e9, 0 1px 1px rgba(0, 0, 0, 0.12), inset 0 1px 1px white;
+    background: linear-gradient(to left right, #f8f8f8, #f3f3f3);*/
+    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
     padding: 20px;
-    border-radius: 5px;
-    border-top: 1px solid #e7e7e7;
+    border-radius: 1px;
+/*    border-top: 1px solid #e7e7e7;*/
     overflow: hidden;
+    background-color: #F5F5F5;
 }
-
+.comment-body{
+    background-color: #fff;
+    padding:10px;
+}
 .comments .comment-date {
-    font-size: 14px;
+    font-size: 11px;
     color: #979797;
-    font-style: italic;
     font-weight: normal;
 }
 
@@ -67,6 +70,7 @@
     font-weight: bold;
     font-size: 14px;
     margin: 0 0 5px 0;
+    color:#0070a8;
 }
 
 /* Apply on 2nd level comments list */
@@ -105,8 +109,8 @@
     border-top: 6px solid #f9f9f9;
 }
 
-.comments .comment-author-avatar img {
-    border: 1px solid #e2e2e2;
+.comments .commentAvatar {
+    border:5px #fff solid;
 }
 
 .comments ul,
