--- a/frontend/web/css/general-css/geo.css
+++ b/frontend/web/css/general-css/geo.css
@@ -90,3 +90,38 @@ ul.institution_info > li strong{
     font-weight: bold;
     font-size: 17px;
 }
+
+#ratingTable{
+    white-space: normal;
+
+}
+#ratingTable th, #ratingTable td{
+    word-wrap: break-word; /* Перенос слов */
+
+}
+
+@media (max-width: 767px) {
+    #ratingTable th, #ratingTable td{
+        padding-left: 4px;
+        padding-right: 4px;
+    }
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+    #ratingTable th, #ratingTable td{
+        padding-left: 2px;
+        padding-right: 2px;
+        font-size: 14px;
+    }
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 410px) {
+    #ratingTable th, #ratingTable td{
+        padding-left: 1px;
+        padding-right: 1px;
+        font-size: 13px;
+        
+    }
+}
