+Блок похожихстатей из категории +Блок сылок из 4 категорий в футере +Добавление водяного знака на фото +Сжатие картинки при загрузке в текстовый редактор админ части.

--- a/frontend/web/css/general-css/pages.css
+++ b/frontend/web/css/general-css/pages.css
@@ -816,6 +816,12 @@ a{
 
 }
 
+.blogpagecontent{
+    overflow: hidden;
+}
+.blogpagecontent img{
+    width: 100%;
+}
 .blog-post > div.blogpagecontent > div {
     border-bottom: 2px #f7d2e4 dashed;
     border-top: 2px #f7d2e4 dashed;
