--- a/frontend/web/css/general-css/pages.css
+++ b/frontend/web/css/general-css/pages.css
@@ -1106,11 +1106,54 @@ article{
     padding: 30px 0 0 0;
 }
 
+/*------------------------------------------------------------------------------------------------------
+                                                                                        Авторы
+--------------------------------------------------------------------------------------------------------*/
+.authorBox{
+    overflow:hidden;
+}
+a.authorImg{
+    text-decoration: none;
+    display: inline-block;
+}
+.authorBox img{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+.authorBox a.authorLink{
+    color: #52A7DC;
+    text-decoration: none;
+    border-bottom: 1px #52A7DC dotted;
+    font-size: 18px;
+
+}
+.authorBox a.authorLink:hover{
+    border-bottom: 1px #52A7DC solid;
+}
+#authorBox{
+    padding: 16px;
+}
+.authorProfImg{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+.authorPosts{
+    margin-bottom: 20px;
+}
+/*------------------------------------------------------------------------------------------------------
+                                                                    конец блока стилей        Авторы
+--------------------------------------------------------------------------------------------------------*/
+
 .gen-img-blogPost{
     width: 100%;
     height: auto;
     padding: 20px 0;
 }
+
+
 /*//////////////////////////////////////////////////////////////////////////////*/
 /*стили горизонтальной секции */
 /*.h3-selection-horizontal{
